Fix the collapsing behaviour

--- a/app/assets/stylesheets/partials/_invite_admin.scss
+++ b/app/assets/stylesheets/partials/_invite_admin.scss
@@ -124,10 +124,9 @@
             @include transition(0.3s);
           }
         }
+
         & + .access-item-wrapper {
-          height: 0px;
-          overflow: hidden;
-          @include transition(0.1s);
+          display: none;
         }
       }
 
